@@ -2,7 +2,7 @@ class JWZThreading
   module VERSION
     unless defined? MAJOR
       MAJOR = 0
-      MINOR = 1
+      MINOR = 2
       TINY  = 0
 
       STRING = [MAJOR, MINOR, TINY].join('.')
