@@ -1,3 +1,8 @@
+2009-06-07 Frederik Dietz <fdietz@gmail.com
+  * code refactoring 
+  * remove dependencies to UUID and logger
+  * replaced rspec with unit tests
+
 2008-08-31 Frederik Dietz <fdietz@gmail.com>
   
   * added CHANGELOG, MIT-LICENSE, setup.rb
